# big-brother

./: .gitignore  README.md  pyproject.toml
src/big_brother/: __init__.py  __main__.py  _check_entry_router.py  _check_loc.py  _check_missing_all.py  _check_multi_fn.py  _laws.py  _report.py  _scanner.py  _stub.py
