[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-big-brother"
version = "0.1.0"
description = "AI-first Python code structure enforcer — 1 file, 1 function"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["linting", "code-structure", "ai-first", "ast", "enforcer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.hatch.build.targets.wheel]
packages = ["src/big_brother"]

[project.scripts]
big-brother = "big_brother:main"
